Changes Immutable List to Mutable List (#10620)
* Changes Immutable List to Mutable List

* Remove Type Specifications